[package]
name = "curved"
version = "0.1.0"
authors = ["Matthew Schubert <matthew.schubert@shoobs.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.bench]
debug = true

[dependencies]
numpy = "0.8.0"
ndarray = ">= 0.13"

[dependencies.pyo3]
version = "0.9.0"
features = ["extension-module"]

[dev-dependencies]
ndarray-rand = "0.11"
criterion = { version = "0.3" }

[[bench]]
name = "rdp"
harness = false